# libsc-native

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: main.c
include/: sc_player.h
src/: lib.rs
