[package]
name = "sc_native_player"
version = "0.1.0"
edition = "2021"

[lib]
name = "soundcloud_streamer"
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
symphonia = { version = "0.5", features = ["mp3"] }